# LogMe-FastAPI-Project

./: .gitignore  README.md  base.db  main.py  pyproject.toml
app/: .env  app.py  auth.py  db.py  deps.py  init_db.py  models.py  shemas.py
site/: admin.html  index.html  login.html  signup.html  user.html
