[project]
name = "project-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bcrypt==4.0.1",
    "fastapi[standard]>=0.127.0",
    "jinja2>=3.1.6",
    "passlib==1.7.4",
    "python-jose>=3.5.0",
    "sqlalchemy>=2.0.45",
    "uvicorn[standard]>=0.40.0",
]
